PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? ????, PHP 6.0
- Unicode support. (Andrei, Dmitry, et al)
- Changed __toString() behavior to call it in all necessary places
  (Marcus, Dmitry)
- Changed "instanceof" and "catch" operators, is_a() and is_subclass_of()
  functions to not call __autoload(). (Dmitry)
- Added --enable-gcov configure option to enable C-level code coverage.
  (John, Jani)
- Added to cURL extension: (Ilia)
  . curl_setopt_array() which allows setting of multiple cURL options.
  . CURLINFO_HEADER_OUT constant to facilitate request retrieval.
- Added --rclass and --rextension CLI parameters to reflect internal classes and
  loaded extensions. (Johannes)
- Added optional parameter to http_build_query() to allow specification of 
  string separator. (Ilia)
- Added an optional parameter to parse_url() to allow retrieval of distinct URL
  components. (Ilia)
- Added an optional parameter to strstr() and stristr() for retrieval of either
  the part of haystack before or after first occurence of needle. (Johannes)
- Added possibility to check in which extension an internal function was
  defined using reflection API. (Johannes)
- Fixed bug #34286 (__toString() behavior is inconsistent). (Marcus)